Bug #9249 NDBD crashes when mapping SHM segment w/o correct permission
Submitted: 17 Mar 2005 13:21 Modified: 13 Oct 2005 10:48
Reporter: Johan Andersson Email Updates:
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:4.1.10 OS:Any (*)
Assigned to: Tomas Ulin Target Version:

[17 Mar 2005 13:21] Johan Andersson
Description:
A ndbd is colocated with a mysqld and interconnected with SHM

The ndbd is started by user root
The mysqld is started as user mysql using the mysqld_safe script
When mysqld tries to connect then ndbd crashes without a trace or error message.

How to repeat:
Setup a config with a shm connection between ndbd and mysqld
start ndbd:
ndbd --ndb-shm &
start mysqld:
mysqld_safe --user=mysql ....

Suggested fix:
Perhaps have a ndbd_safe script that starts ndbd as another user.
[24 Mar 2005 4:27] Jorge del Conde
verified w/4.1.11 from bk
[11 Oct 2005 11:50] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/30906
[13 Oct 2005 6:37] Tomas Ulin
fixed in 5.0.15, not in 4.1
[13 Oct 2005 10:48] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 5.0.15 changelog. Closed.