Bug #9249  	NDBD crashes when mapping SHM segment w/o correct permission